--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Título hola mundo</title> <!--título que aparece en la parte superior del navegador-->
     <meta name="description" content="es un hola mundo">
     <meta name= "keywords" content="hola, HTML, mundo">
+    <link rel="icon" href="https://www.flaticon.es/svg/static/icons/svg/29/29104.svg">
 </head>
 
 <body>
